Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36139

Qmlplugindump tool does not generate information about singleton and creatability of the component

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • None
    • 5.2.0
    • Core: Plugins
    • None
    • If85374a1854aaa0727670b27df735d481cab5337

    Description

      Output from qmlplugindump does not provide following information:

      • component is creatabale from QML
      • component is singleton

      We needed this information in Momentics IDE to provide the same level of support
      as in our original solution where components were described in proprietary xml file. We have recently switched to qmltypes as a primary source of information for IDE therefore we enhanced qmplugindump. We would like to contribute this change back to Qt project because this information could be used by QtCreator in similar fashion as it is used by Momentics IDE

      We have added two new boolean properties:

      • isCreatable with default value true. This property is false if component was registered with call qmlRegisterUncreatableType().

      Example:
      Component {
      name: "QDeclarativeApplication"
      prototype: "QObject"
      exports: [
      "QtQuick/Application 1.1"
      ]
      exportMetaObjectRevisions: [
      0
      ]
      isCreatable: false
      Property

      { name: "active"; type: "bool"; isReadonly: true }

      Property

      { name: "layoutDirection"; type: "Qt::LayoutDirection"; isReadonly: true }

      Signal

      { name: "activeChanged" }

      Signal

      { name: "layoutDirectionChanged" }

      }

      • isSingleton with default value false. Property isSingleton is true if component was registered by calling function qmlRegisterSingletonType().
        Example:
        Component
        Unknown macro: { name}

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            fawzi Fawzi Mohamed
            dpesch Daniel Pesch
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes